applications/custom/cost-tracker/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cost-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cost-tracker
  template:
    metadata:
      labels:
        app: cost-tracker
    spec:
      hostAliases:
        - ip: "10.0.0.110"
          hostnames:
            - auth.neustrom.net
      containers:
        - name: cost-tracker
          image: ghcr.io/golgor/cost-tracker:1.1.1
          ports:
            - containerPort: 8000
